# sim_platform

./: README.md
rviz_configs/: depth_cam.rviz
src/navigation/: CMakeLists.txt  package.xml
src/navigation/config/: nav2_params.yaml
src/sim/: package.xml
src/sim/description/: imu.xacro  robot.urdf.xacro  robot_core.xacro
src/sim/description/sensors/: depth_camera.xacro  gps.xacro  imu.xacro
src/sim/launch/: launch_sim.launch.py  rsp.launch.py
src/sim/worlds/: empty.world
src/sim_launcher/: CMakeLists.txt  package.xml
src/sim_launcher/launch/: launch_simulation.launch.py
src/teleop/: CMakeLists.txt  package.xml
src/teleop/launch/: teleop.launch.py
src/teleop/src/: teleop_node.cpp
src/ukf_launch/: CMakeLists.txt  package.xml
src/ukf_launch/config/: navsat_config.yaml  ukf_config.yaml  ukf_config_gps.yaml  world_ukf_config.yaml
src/ukf_launch/launch/: ukf.launch.py
startup/: bringup_robot.sh
